cabal-version:       2.4
name:                bitlaser
version:             0.1.0.0
synopsis:            DSL for expressing bit-operation problems and turning them into SAT problems
license:             ISC
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikjuo@gmail.com
copyright:           2019 (c) Mikko Juola
category:            Math
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     BitLaser.SATRunner
                       BitLaser.BinaryFormula
                       BitLaser.Ops
                       BitLaser.Examples
  build-depends:       attoparsec       >=0.12 && <1.0
                      ,base             >=4.9 &&  <5.0
                      ,bytestring       >=0.10 && <1.0
                      ,free             >=4.0  && <5.0
                      ,lens             >=4.0 &&  <5.0
                      ,containers       >=0.5 &&  <1.0
                      ,pipes            >=4.0 &&  <5.0
                      ,pipes-bytestring >=2.0 &&  <3.0
                      ,process          >=1.2 &&  <2.0
                      ,transformers     >=0.4 &&  <1.0
                      ,vector           >=0.10 && <1.0
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010
